--- a/gb/22/4/1/n13688930.md
+++ b/gb/22/4/1/n13688930.md
@@ -2,7 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【更新4.1】俄军缓慢撤出乌克兰北部地区</h2>
-<a href="https://dnuodzs8nln8v.cloudfront.net/N6qAJ6gcr"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dd92z3w2j4w9k.cloudfront.net/C2sAJ6gco"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>2022年3月29日，一名乌克兰军人在东北部城市特罗斯蒂亚涅茨的一辆被摧毁的俄罗斯坦克。(Fadel Senna / AFP)
 </h6>
 <hr>
@@ -11,6 +11,13 @@
 <p>英国国防部的情报更新显示，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>军队已经夺回了基辅和北部城市切尔尼戈夫（Chernihiv）之间的一条主要补给线沿线的两个村庄，它们分别是切尔尼戈夫以南的斯洛博达（Sloboda）和卢卡希夫卡（Lukashivka）。</p>
 <p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>外交部长谢尔盖?拉夫罗夫（Sergei Lavrov）表示，俄罗斯正在准备回应乌克兰的有关安全保障和结束战争提议。</p>
 <h3>以下是4月1日俄乌局势实时更新：</h3>
+<h3>俄驻英大使：英国向乌提供高端武器将成为俄军的“合理（打击）目标”</p>
+<h3>
+俄罗斯驻英国大使安德烈·克林（Andrei Kelin）在俄罗斯国家通讯社塔斯社周六发表的采访中说，如果英国向乌克兰提供远程火炮武器和反舰系统，它们将成为俄罗斯军队的“合理（打击）目标”。</p>
+<p>据塔斯社报导，克林说：“任何武器的交付都在破坏稳定的，特别是（本）华莱士（英国国防部长）提到的那些武器。它们加剧了局势（紧张），使其更加血腥。”</p>
+<p>“显然，这些是新的、相当高精尖的武器。当然，如果它们越过乌克兰边境，它们将成为我们武装部队的合理（打击）目标。”</p>
+<p>“我有一种感觉，伦敦对乌克兰军事情况的看法是基于乌克兰国防部和乌克兰领导层的虚张声势的报告形成的，”克林说。</p>
+<p>日前在为乌克兰举行的国际捐助会议之后，英国国防部长本-华莱士周四宣布，英国及其盟国将向乌克兰提供“更多致命（武器）援助”。</p>
 <h3>泽连斯基不愿讨论俄罗斯燃料库袭击事件</h3>
 <p>乌克兰总统泽连斯基拒绝就他是否下令袭击俄罗斯燃料库一事发表评论。</p>
 <p>泽连斯基在接受福克斯新闻采访时表示，他不讨论他作为总司令发布的任何命令。</p>
@@ -49,7 +56,7 @@
 <blockquote class="twitter-tweet">
 <p dir="ltr" lang="en">Latest Defence Intelligence update on the situation in Ukraine &#8211; 1 April 2022</p>
 <p>Find out more about the UK government&#8217;s response: <ahref="https://t.co/S4wVaMZtga">https://t.co/S4wVaMZtga</a></p>
-<p><ahref="https://twitter.com/hashtag/StandWithUkraine?src=hash&amp;ref_src=twsrc%5Etfw">#StandWithUkraine</a> <ahref="https://t.co/kVwPTxk4xF"></a><a href="https://dnuodzs8nln8v.cloudfront.net/N6qAJ6gcr"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="kVwPTxk4xF</a></p>
+<p><ahref="https://twitter.com/hashtag/StandWithUkraine?src=hash&amp;ref_src=twsrc%5Etfw">#StandWithUkraine</a> <ahref="https://t.co/kVwPTxk4xF"></a><a href="https://dd92z3w2j4w9k.cloudfront.net/C2sAJ6gco"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="kVwPTxk4xF</a></p>
 <p>— Ministry of Defence? (@DefenceHQ) <ahref="https://twitter.com/DefenceHQ/status/1509999958988103683?ref_src=twsrc%5Etfw">April 1, 2022</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <h3>乌国防部拒绝进一步评论俄燃料库火灾</h3>
@@ -144,13 +151,13 @@
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684349.md#1">分析：中国资产政治风险浓厚 外资回流阻力大</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684456.md#1">乌空军透露战略：引诱俄军机进入防御陷阱</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690724.md#1">德国拟购买以色列或美国导弹防御系统</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690449.md#1">八旬老邻居遗失婚戒半世纪 热心男帮寻回</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690431.md#1">泽连斯基：俄军在基辅外广埋地雷 欲制造灾难</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134371.md#1" target="_blank">中共反对提倡“礼义廉耻”的新生活运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/13/n11110799.md#1" target="_blank">重庆八旬教师控告江泽民 遭报复</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042647.md#1" target="_blank">林辉：咏春拳文革遭遇是武林劫难的缩影</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/2/n11157870.md#1" target="_blank">中共强摘器官 芬兰议会九议员吁惩罚罪犯</a></li><hr>
 
 
 <strong>热门新闻：</strong>
