--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -52,7 +52,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11248618.md#1" target="_blank">救母何惧强暴 正义存于人心</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/7/n11029582.md#1" target="_blank">荟楠：快跑！祖国来了！</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11267496.md#1" target="_blank">少年心声：你若心里难受 就请看《转法轮》</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
