--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -19,6 +19,22 @@
 <p>“克雷门丘克（Kremenchuk），很多导弹（周六）上午袭击了该城市。”卢宁补充道。</p>
 <p>俄罗斯国防部发言人伊戈尔?科纳申科夫(Igor Konashenkov)在周六的简报中说，俄军袭击了克雷门丘克的炼油厂，摧毁了储存汽油和柴油的设施，这些设施为乌克兰东部和中部地区的部队提供了汽油和柴油燃料。</p>
 <p>卢宁说，三架俄罗斯飞机在当地时间周六上午6点左右实施了这次袭击。</p>
+<h3>马里乌波尔的重要性</h3>
+<p>为什么俄罗斯认为南部港口马里乌波尔如此重要？</p>
+<p>如果马里乌波尔陷落，俄罗斯将控制乌克兰最大的港口之一，并在克里米亚与俄罗斯支持的分离主义者控制的卢甘斯克和顿涅茨克地区之间建立一条陆地走廊。</p>
+<p>通过叛军控制的地区将克里米亚与俄罗斯大陆连接起来，将使俄罗斯更容易使货物和人员往返于克里米亚。自2014年乌克兰东部爆发冲突开始以来，俄罗斯就一直想要这样做。</p>
+<p>目前，该半岛通过一座桥梁与俄罗斯相连。</p>
+<h3>乌克兰摄影师遇害</h3>
+<p>马克西姆·莱文（Maksim Levin）是一名为乌克兰新闻网站工作的摄影师和摄像师，他也是路透社的长期撰稿人，在报导俄罗斯入侵乌克兰时遇害。他留下了妻子和四个孩子。</p>
+<p>他工作的新闻网站LB.ua周六表示，莱文的尸体于4月1日在乌克兰首都基辅以北的一个村庄被发现。</p>
+<p>莱文出生于1981年，是一名纪录片制作人，自2013年以来一直为路透社报导乌克兰做贡献。</p>
+<p>他一直在Huta Mezhyhirska村工作。那个地区遭遇了猛烈炮击。</p>
+<p>乌克兰总检察长办公室表示，莱文“被俄罗斯武装部队的军人用小型武器击中两次”。目前无法独立验证莱文的死讯。</p>
+<h3>俄军在卢甘斯克炮击撤离车队</h3>
+<p>卢甘斯克（Luhansk）地区军事行政当局负责人表示，周六有2,700名平民从该地区撤离，但俄罗斯军队炮击了从发生激烈战斗城镇撤离的人。</p>
+<p>塞尔希·海岱（Serhiy Haidai）说：“俄罗斯人在疏散期间故意袭击。聚集处附近有炮弹。幸运的是，每个人都还活着。”</p>
+<p>海岱表示还为留下的人提供了数吨人道主义援助，警察已经开始将物资运送到防空洞。</p>
+<p>“让我提醒你，疏散仍在继续。”海岱说，“每天早上都有公车在等你。”</p>
 <h3>加大对俄施压 欧盟正在准备祭出更多制裁</h3>
 <p>据路透社报导，欧盟经济专员真蒂洛尼说，欧盟正在努力通过进一步制裁来加大对俄罗斯的施压，但表示任何额外措施都不会影响能源行业。</p>
 <p>德国和奥地利宣布计划采取预防措施进行天然气配给，以避免俄罗斯供应的可能中断。</p>
@@ -52,7 +68,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/31/n10010812.md#1" target="_blank">文武：反封建“等级制度”是典型的党文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/6/17/n3896170.md#1" target="_blank">与同事的对话：法轮功没有政治诉求</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/17/n10491766.md#1" target="_blank">朝鲜战争锣鼓掩盖下的暴力土改</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
